# chatgpt-cli

./: Cargo.toml  README.md
src/: api_response.rs  call_api.rs  chat_input.rs  chat_message.rs  chatgpt_client.rs  claude_api_res.rs  claude_client.rs  lib.rs  main.rs  model.rs  openai_api_res.rs  openai_client.rs
