[package]
name = "aichat-cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "multipart",
  "native-tls",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rustyline = "12.0.0"
requestty = "0.2.1"
anyhow = "1.0"
